/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java application project to get you started.
 * For more details on building Java & JVM projects, please refer to https://docs.gradle.org/8.12/userguide/building_java_projects.html in the Gradle documentation.
 */

plugins {
    // Apply the application plugin to add support for building a CLI application in Java.
    id 'application'
    id 'maven-publish'
    id 'org.openjfx.javafxplugin' version '0.0.13'
}

publishing {
    publications {
        create("maven", MavenPublication) {
            groupId = "com.gradle.tutorial"
            artifactId = "tutorial"
            version = "1.0"

            from(components["java"])
        }
    }
}

repositories {
    // Use Maven Central for resolving dependencies.
    mavenCentral()
}

dependencies {
    // Use JUnit Jupiter for testing.
    testImplementation libs.junit.jupiter

    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    // This dependency is used by the application.
    implementation libs.guava

    // 引入 servlet
    implementation 'javax.servlet:javax.servlet-api:4.0.1'

    // 引入Junit
    testImplementation 'junit:junit:4.12'
    // 引入 JDBC
    implementation 'mysql:mysql-connector-java:8.0.27'

    // 引入 Tomcat
    implementation 'org.apache.tomcat.embed:tomcat-embed-core:9.0.54'

    // 引入dom4j
    implementation 'org.dom4j:dom4j:2.1.3'

    // 引入org.openjfx
    implementation 'org.openjfx:javafx-controls:17.0.2'
    implementation 'org.openjfx:javafx-fxml:17.0.2'
}

// Apply a specific Java toolchain to ease working on different environments.
java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

application {
    // Define the main class for the application.
    mainClass = 'org.example.mediator.Client'
}

tasks.named('test') {
    // Use JUnit Platform for unit tests.
    useJUnitPlatform()
}

javafx {
    // 指定版本
    version = '17.0.2'
    // 指定模块
    modules = ['javafx.controls', 'javafx.fxml', 'javafx.graphics']
}

run {
    jvmArgs = [
        '--add-modules', 'javafx.controls,javafx.fxml,javafx.graphics',
        '--add-exports', 'javafx.graphics/com.sun.glass.ui=ALL-UNNAMED',
        '--add-exports', 'javafx.graphics/com.sun.glass.ui.mac=ALL-UNNAMED'
    ]
}


